Last (?) of improvements to recursion detection after adding recursive updates to Flow integration test in extra-tests/InvocableDrivenTests.cls. Because of the way that flow alternately boxcars/queues up different updates, it's doubly important here to make sure that the records are passing through in the right order to properly trigger detection on events like reparenting AND prevent recursive updates from running unless there's been a definitive change to the calc item/rollup operation in question

--- a/extra-tests/classes/RollupIntegrationTests.cls
+++ b/extra-tests/classes/RollupIntegrationTests.cls
@@ -632,11 +632,7 @@ private class RollupIntegrationTests {
   @isTest
   static void shouldNotBlowUpForRecursiveCheckOnFormulaFields() {
     String oppId = RollupTestUtils.createId(Opportunity.SObjectType);
-    Opportunity opp = new Opportunity(
-      Amount = 15,
-      AccountId = RollupTestUtils.createId(Account.SObjectType),
-      Id = oppId
-    );
+    Opportunity opp = new Opportunity(Amount = 15, AccountId = RollupTestUtils.createId(Account.SObjectType), Id = oppId);
     List<Opportunity> opps = new List<Opportunity>{ opp };
     Formula.recalculateFormulas(opps); // sets the AmountFormula__c field on the opp
 
@@ -653,6 +649,7 @@ private class RollupIntegrationTests {
 
     System.assertEquals(true, eval.matches(opp), 'Should match when not recursive');
 
+    RollupEvaluator.stubRequestId = 'somethingElse';
     // re-initialize to trigger recursion detection
     eval = RollupEvaluator.getEvaluator(
       null,
