--- a/extra-tests/classes/InvocableDrivenTests.cls
+++ b/extra-tests/classes/InvocableDrivenTests.cls
@@ -15,8 +15,10 @@ private class InvocableDrivenTests {
     Account reparentAccount = new Account(Name = 'Reparent');
     insert reparentAccount;
 
-    Case one = new Case(Amount__c = 1, AccountId = acc.Id, Description = 'distinct', Subject = 'One');
-    Case two = new Case(Amount__c = 2, AccountId = acc.Id, Description = 'again', Subject = 'Two');
+    Date today = System.today();
+
+    Case one = new Case(Amount__c = 1, AccountId = acc.Id, Description = 'distinct', Subject = 'One', DateField__c = today.addDays(-2));
+    Case two = new Case(Amount__c = 2, AccountId = acc.Id, Description = 'again', Subject = 'Two', DateField__c = today);
     Case three = new Case(Amount__c = 0, AccountId = reparentAccount.Id, Description = 'something else', Subject = 'Three');
     Case four = new Case(Amount__c = 0, AccountId = reparentAccount.Id, Description = one.Description, Subject = 'Four');
 
@@ -27,18 +29,24 @@ private class InvocableDrivenTests {
     one.AccountId = reparentAccount.Id;
     update one;
 
+    // Trigger recursive update after reparenting
+    // this is important because it not only validates that the recursion
+    // detection is working properly, but also because it validates that the
+    // recursion detection is necessary to calculate the results properly!
     one.Subject = 'Z';
     update one;
     Test.stopTest();
 
-    acc = [SELECT Id, Description, AnnualRevenue, Name, NumberOfEmployees FROM Account WHERE Id = :acc.Id];
-    reparentAccount = [SELECT Id, Description, AnnualRevenue, Name, NumberOfEmployees FROM Account WHERE Id = :reparentAccount.Id];
+    acc = [SELECT Id, Description, AnnualRevenue, Name, NumberOfEmployees, DateField__c FROM Account WHERE Id = :acc.Id];
+    reparentAccount = [SELECT Id, Description, AnnualRevenue, Name, NumberOfEmployees, DateField__c FROM Account WHERE Id = :reparentAccount.Id];
 
+    System.assertEquals(today, acc.DateField__c, 'LAST should have been updated to new last');
     System.assertEquals(2, acc.AnnualRevenue, 'First account sum field should be decremented on reparent');
     System.assertEquals(two.Description, acc.Description, 'CONCAT_DISTINCT should remove extra text on reparent');
     System.assertEquals(1, acc.NumberOfEmployees);
     System.assertEquals(two.Subject, acc.Name);
 
+    System.assertEquals(today.addDays(-2), reparentAccount.DateField__c);
     System.assertEquals(3, reparentAccount.NumberOfEmployees, 'Second account should properly reflect reparented record for number of employees');
     System.assertEquals(one.Description + ', ' + three.Description, reparentAccount.Description, 'Second account should have only reparented case description');
     System.assertEquals(one.Subject, reparentAccount.Name, 'Second account name field should reflect last subject');
